# ED2021.3

./: CMakeLists.txt  ED2 SEG.cbp  ED2 SEG.depend  ED2 SEG.layout  Leitura.h  README.md  Timer.cpp  Timer.h  cabecalhos_basicos.h  includes.h  leitura.h  main.cpp  structs.h
ED2021/: CMakeLists.txt  ED2021.cpp  ED2021.h  Timer.cpp  Timer.h
src/: ArvoreB.cpp  ArvoreB.h  Leitura.cpp  Leitura.h  Leitura_Legacy.cpp  NoB.h  Parametros.h  Parametros_constantes.h  Timer.cpp  Timer.h  main.cpp  moduloTeste.cpp  ordenacao.cpp  ordenacao.h  tabelaHash.cpp  tabelaHash.h
