# CMakeList.txt: projeto de CMake para ED2021, incluir origem e definir
# lógica específica a um projeto aqui.
#
cmake_minimum_required (VERSION 3.8)

# Adicione a origem ao executável deste projeto.
add_executable (ED2021 "ED2021.cpp" "ED2021.h" "TImer.h"  "Timer.cpp"   )

# TODO: Adicione testes e instale destinos, se necessário.
